# RyanVideoPlayer

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  PlayerControllerNative.cpp  video_player_controller.cpp  video_player_controller.h
app/src/main/cpp/common/opengl_media/render/: video_gl_surface_render.cpp
app/src/main/cpp/common/opengl_media/texture/: yuv_texture_frame.cpp
app/src/main/cpp/video_player/: video_player_controller.cpp  video_player_controller.h
app/src/main/cpp/video_player/decoder/: video_decoder.cpp  video_decoder.h
app/src/main/cpp/video_player/sync/: av_synchronizer.cpp
app/src/main/java/com/ryan/videoplayer/: MainActivity.java  MainApplication.java
app/src/main/java/com/ryan/videoplayer/base/: BaseActivity.java
app/src/main/java/com/ryan/videoplayer/decoder/: MediaCodecDecoder.java  MediaCodecDecoderLifeCycle.java
app/src/main/java/com/ryan/videoplayer/player/: OnInitializedCallback.java  OnStoppedCallback.java  PlayerController.java
app/src/main/java/com/ryan/videoplayer/utils/: Logger.java  PermissionsUtils.java  SystemUtils.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
